Enable Java Preview